# pyxel-prelection

./: .gitignore  LICENSE  README.md  generate_stages_for_readme.sh  prelection.sh  pyproject.toml  requirements.txt
docs/: index.html
game/: blt_demo.py  game.py
src/game/: __main__.py  blt_demo.py  game.py
